# kytran-system-operations

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  host_monitor.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  pypi-publish.yml
docs/: windows-gpu-node-setup.md
docs/specs/: 2026-04-12-access-control-design.md  2026-04-12-access-control-plan.md
kytran_server_manager/: __init__.py  app.py  auth.py  config.py  db.py  helpers.py  rbac.py  system_service.py  theme.py
kytran_server_manager/middleware/: tier_gate.py
kytran_server_manager/migrations/: 001_schema_init.sql
kytran_server_manager/routes/: __init__.py  badge_routes.py  billing_routes.py  compliance_routes.py  core_routes.py  docker_routes.py  firewall_routes.py  health_routes.py  helpers.py  network_routes.py  process_routes.py  proxy_routes.py  stack_routes.py  storage_routes.py  subscription_routes.py
kytran_server_manager/rule_packs/: cis-ubuntu-22.04.json  docker-stig.json  hipaa-security.json  network-stig.json  ubuntu-22.04-stig.json
kytran_server_manager/services/: app_catalog_service.py  cert_service.py  compliance_service.py  host_command_client.py  hub_client.py  report_service.py  scheduler.py  subscription_service.py  system_service.py
kytran_server_manager/templates/: apps.html  base.html  compliance_report.html  dashboard.html  landing.html  login.html  settings.html  setup.html  splash.html  upgrade_required.html
kytran_server_manager/themes/: arctic.json  ember.json  kytran.json  lcars.json  midnight.json
kytran_system_operations/: __init__.py  app.py  auth.py  billing_gate.py  config.py  database.py  db.py  helpers.py  kytran_auth.py  rbac.py  theme.py
kytran_system_operations/middleware/: tier_gate.py
kytran_system_operations/migrations/: 001_schema_init.sql  __init__.py
kytran_system_operations/routes/: __init__.py  app_catalog_routes.py  badge_routes.py  billing_routes.py  compliance_routes.py  docker_routes.py  firewall_routes.py  health_routes.py  helpers.py  host_command_client.py  network_routes.py  proxy_routes.py  stack_routes.py  system_service.py  (+1 more)
secrets/: .gitignore  README.md  db_password.txt.example
(+41 files in other folders)
