[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kytran-system-operations"
version = "1.0.0"
description = "Server management and compliance scanning dashboard with LCARS theme"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Kytran Empowerment Inc.", email = "admin@kytranempowerment.com"}]
keywords = ["server-management", "compliance", "stig", "hipaa", "soc2", "dashboard", "lcars", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "flask>=3.0",
    "flask-login>=0.6",
    "psutil>=5.9",
    "bcrypt>=4.0",
    "requests>=2.28",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9",
]

[project.urls]
Homepage = "https://server.kytranempowerment.com"
Repository = "https://github.com/KytranKatarn/kytran-system-operations"
Documentation = "https://kytranempowerment.com/products"

[tool.setuptools.package-data]
kytran_server_manager = [
    "static/**/*",
    "templates/**/*",
    "themes/**/*",
    "rule_packs/**/*",
]

[project.scripts]
kytran-system-operations = "kytran_server_manager.app:main"
